hphp/hack/test/typecheck/inout/bad_inout_hint_call5.php.exp
File "bad_inout_hint_call5.php", line 7, characters 5-5:
Invalid argument (Typing[4110])
File "bad_inout_hint_call5.php", line 7, characters 12-17:
This is a string
File "bad_inout_hint_call5.php", line 3, characters 30-32:
It is incompatible with an int
