hphp/hack/test/typecheck/inout/bad_inout_hint_call5.php
<?hh // strict

function foo((function(inout int): void) $f): void {}

function test(): void {
  foo(
    (inout string $v) ==> {
    },
  );
}
